# bib-downloader

./: .gitignore  README.md  bib_doi_fill.py  main.py  pyproject.toml  sci-downloader.py
src/bib_doi_fill/: __init__.py  __main__.py  bibtex.py  cli.py  pubmed.py
