[project]
name = "bib-downloader"
version = "2.1.0"
description = "A collection of tools for downloading academic papers and enriching BibTeX metadata"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bibtexparser>=1.4.4",
    "loguru>=0.7.3",
    "metapub>=0.7.4",
    "playwright>=1.60.0",
    "typer>=0.26.3",
]

[project.scripts]
bibtex-enrich = "bib_doi_fill.cli:entry_point"

[tool.uv]
package = true
